--- a/blog/app/views/articles/edit.html.erb
+++ b/blog/app/views/articles/edit.html.erb
@@ -1,6 +1,7 @@
+<h1>Editing article</h1>
 
-<%= form_for :article, url: articles_path do |f| %>
- 
+<%= form_for :article, url: article_path(@article), method: :patch do |f| %>
+
   <% if @article.errors.any? %>
     <div id="error_explanation">
       <h2>
@@ -14,21 +15,21 @@
       </ul>
     </div>
   <% end %>
- 
+
   <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
- 
+
   <p>
     <%= f.label :text %><br>
     <%= f.text_area :text %>
   </p>
- 
+
   <p>
     <%= f.submit %>
   </p>
- 
+
 <% end %>
- 
+
 <%= link_to 'Back', articles_path %>
